fix animation mobile menu

--- a/src/common.blocks/header/header__menu.less
+++ b/src/common.blocks/header/header__menu.less
@@ -13,7 +13,7 @@
     border-radius: 0.5rem;
     transform: translateX(-50%);
     transition: left @cubic500;
-    @media (min-width:768px){
+    @media (min-width: 768px) {
         min-width: unset;
         position: static;
         top: unset;
@@ -25,7 +25,7 @@
         margin: 0;
         padding: 0;
     }
-    &_hide{
-        left:-150%;
+    &-hide {
+        left: -150%;
     }
 }
